...
                        }
                    } },
                    modifier = Modifier
                ) {
                    Icon(
                        imageVector = Icons.Filled.ArrowBack,
                        contentDescription = "Log Back Arrow"
                    )
                }
            }

            Column(
                horizontalAlignment = Alignment.CenterHorizontally,
...
                )
                Text(
                    text = date.format(DateTimeFormatter.ofLocalizedDate(FormatStyle.FULL)),
                    fontWeight = FontWeight.Bold,
                    textAlign = TextAlign.Center,
                    modifier = Modifier
                        .testTag("DateLabel")
                        .semantics { contentDescription = "DateLabel" }
                )
            }

            Column(
                horizontalAlignment = Alignment.CenterHorizontally,
...
                    .height(40.dp)
            ) {
                Text(
                    text = "Save",
                    textAlign = TextAlign.Center,
                    modifier = Modifier
                        .semantics { contentDescription = "Save Button" },
                    color = Color.White
                )
            }
        }
    } else {
        onClick()
...
